tests/toy/neg/001669_mutation.toylang
program a = { while a var do sleep; } .
